@@ -158,6 +158,7 @@ APU_DECLARE(apr_bucket *) apr_bucket_transient_create(
 const apr_bucket_type_t apr_bucket_type_immortal = {
     "IMMORTAL", 5,
     apr_bucket_destroy_noop,
+    free,
     simple_read,
     apr_bucket_setaside_noop,
     apr_bucket_simple_split,
@@ -167,6 +168,7 @@ const apr_bucket_type_t apr_bucket_type_immortal = {
 APU_DECLARE_DATA const apr_bucket_type_t apr_bucket_type_transient = {
     "TRANSIENT", 5,
     apr_bucket_destroy_noop, 
+    free,
     simple_read,
     transient_setaside,
     apr_bucket_simple_split,
